migration/tauraus/tauraus/deploymnet.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tauraus-api
spec:
  selector:
    matchLabels:
      app: tauraus-api
  template:
    metadata:
      labels:
        app: tauraus-api
    spec:
      containers:
      - name: tauraus
        image: 086351999451.dkr.ecr.ap-south-1.amazonaws.com/tauraus:1.0
        resources: {}
          # limits:
          #   cpu: 1000m
          #   memory: 1024Mi  

        ports:
        - containerPort: 9000
        livenessProbe:
          httpGet: 
            path: /v1/health
            port: 9000
          timeoutSeconds: 10
          periodSeconds: 4
          failureThreshold: 10
          initialDelaySeconds: 25
          successThreshold: 1
        readinessProbe:
          httpGet:
            path: /v1/health
            port: 9000
          timeoutSeconds: 10
          periodSeconds: 2
          failureThreshold: 10
          initialDelaySeconds: 15
          successThreshold: 1
