migration/tauraus/tauraus/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tauraus-api
spec:
  ingressClassName: nginx
  rules:
  - host: tauraus.s9.devopscloud.link
    http:
      paths:
      - backend:
           service:
             name: tauraus-api
             port:
               number: 9000
        path: /
        pathType: Prefix
